--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
 <body>
   <div id="game">
     <div id="background"></div>
-    <img id="character" src="" alt="">
+
+    <!-- Multiple characters container -->
+    <div id="characters-container"></div>
+
+    <!-- Items on screen -->
+    <div id="items-container"></div>
+
+    <!-- Story textbox -->
     <div id="textbox">
       <p id="story"></p>
       <div id="choices"></div>
-      <div id="inventory">
-        <h3>Inventory:</h3>
-        <ul id="inventory-list"></ul>
-      </div>
+    </div>
+
+    <!-- Inventory -->
+    <div id="inventory">
+      <h3>Inventory:</h3>
+      <ul id="inventory-list"></ul>
     </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
-
