--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <div id="game">
     <div id="background"></div>
 
-    <!-- Multiple characters container -->
+    <!-- Characters container -->
     <div id="characters-container"></div>
 
-    <!-- Items on screen -->
+    <!-- Items container -->
     <div id="items-container"></div>
 
     <!-- Story textbox -->
