--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <div id="game">
-    <div id="background"></div>
+    <div id="images"></div>
 
-    <div id="characters-container"></div>
-    <div id="items-container"></div>
+    <div id="characters"></div>
+    <div id="items"></div>
 
     <div id="textbox">
       <p id="story"></p>
@@ -26,5 +26,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
