--- a/index.html
+++ b/index.html
@@ -7,25 +7,18 @@
 </head>
 <body>
   <div id="game">
-    <div id="images"></div>
-
+    <div id="background"></div>
     <div id="characters"></div>
     <div id="items"></div>
-
     <div id="textbox">
       <p id="story"></p>
       <div id="choices"></div>
     </div>
-
-    <div id="inventory">
-      <h3>Inventory:</h3>
-      <ul id="inventory-list"></ul>
-    </div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
