--- a/index.html
+++ b/index.html
@@ -1,64 +1,23 @@
-body {
-  margin: 0;
-  font-family: 'Press Start 2P', cursive;
-  background: black;
-  color: white;
-  text-align: center;
-}
-
-#game {
-  position: relative;
-  width: 800px;
-  height: 600px;
-  margin: 20px auto;
-  border: 4px solid white;
-  overflow: hidden;
-}
-
-#background {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  transition: background-image 0.5s ease, opacity 0.5s ease;
-  opacity: 1;
-}
-
-#hero {
-  position: absolute;
-  width: 120px;
-  height: 180px;
-  bottom: 150px;
-  left: 340px;
-  z-index: 10;
-}
-
-.item {
-  position: absolute;
-  width: 80px;
-  height: 80px;
-  bottom: 160px;
-}
-
-#textbox {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  background: rgba(0,0,0,0.7);
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-#choices button {
-  display: block;
-  margin: 10px auto;
-  padding: 10px;
-  font-family: inherit;
-  cursor: pointer;
-}
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Pixel Adventure: A Magical Journey</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="game">
+    <div id="background"></div>
+    <img id="hero" src="characters/hero.png" alt="Hero">
+    <div id="items-container"></div>
+    <div id="textbox">
+      <p id="story"></p>
+      <div id="choices"></div>
+    </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
 
 
 
