--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
   <div id="game">
     <div id="background"></div>
-    <img id="hero" src="characters/hero.png" alt="Hero">
-    <div id="items-container"></div>
+    <img id="character" src="" alt="">
     <div id="textbox">
       <p id="story"></p>
       <div id="choices"></div>
@@ -18,6 +17,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
