--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Pixel Adventure: A Magical Journey</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Pixel Adventure: A Magical Journey</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="game">
-    <div id="background"></div>
-    <img id="character" src="" alt="">
-    <div id="textbox">
-      <p id="story"></p>
-      <div id="choices"></div>
+    <div id="game-container">
+        <img id="background" src="images/village_garden.jpg" alt="Background">
+        <img id="character" src="characters/hero.png" alt="Hero">
+        <div id="story-text"></div>
+        <div id="choices"></div>
     </div>
-  </div>
-  <script src="script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
-
-
 
 
